# PyTail

./: .pre-commit-config.yaml  AGENT.md  Cargo.toml  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  hot_cache.rs  lib.rs  local.rs  main.rs  range.rs  registry.rs  server.rs  simple.rs  snapshot.rs  upstream.rs
tests/: cache_lru.rs  flat_pytorch.rs  pip_smoke.rs
web/: package.json
web/src/: main.ts  styles.css
