[package]
name = "devpi-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
httpdate = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
