[package]
name = "pytail"
version = "0.1.9"
edition = "2024"
default-run = "pytail"
autobins = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
bench-tools = []

[[bin]]
name = "pytail"
path = "src/main.rs"

[[bin]]
name = "fanout_bench"
path = "src/bin/fanout_bench.rs"
required-features = ["bench-tools"]

[[bin]]
name = "hot_path_bench"
path = "src/bin/hot_path_bench.rs"
required-features = ["bench-tools"]

[[bin]]
name = "root_summary_bench"
path = "src/bin/root_summary_bench.rs"
required-features = ["bench-tools"]

[dependencies]
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures-util = "0.3"
mime_guess = "2"
mimalloc = "0.1"
moka = { version = "0.12", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.40", features = ["bundled"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
